--- a/v2/Makefile
+++ b/v2/Makefile
@@ -16,3 +16,6 @@ tidy:
 test:
 	go test -race -covermode=atomic $(shell go list ./... | grep -v /vendor/)
 	go test -bench=. $(shell go list ./... | grep -v /vendor/)
+
+vuln:
+	govulncheck -v ./...
