--- a/.golangci.yml
+++ b/.golangci.yml
@@ -64,8 +64,8 @@ linters:
 
 linters-settings:
   govet:
-    check-shadowing: true
-    #enable:
+    enable:
+      - shadow
       #- fieldalignment
     enable-all: false
   cyclop:
